2006-10-17  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* src/lockable.h: Do that.
	* src/userver.cc: Idem.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Use install-sh -C for headers.
	* configure.ac (INSTALL_HEADER): Define.
	This fixes the symptoms of a weird issue: when running
	"make install" in the kernel, when install goes into
	liburbi the headers are installed with fresh timestamps, and
	therefore, when install arrives back in the kernel's
	directory, it recompiles again.
	Now the timestamps are no longer updated.
	But in the first place, when should not depend on
	installed headers, but on our shipped headers.

2006-10-16  Akim Demaille  <demaille@gostai.com>

	Tidy.
	Move all the sources into src.
	Use the latest liburbi-c++.
	* configure.ac: Create config.h.
	* Makefile.am: Put bits into...
	* src/Makefile.am: this new file.
	* src/parser/bison/bison.mk: Adjust.
	* src/uvalue.cc, src/network/bsdnet/network.cc,
	* src/userver.cc, src/uobject/uobject.cc,
	* src/uobject/uobject.h, src/uobject/uext.h,
	* src/uobject/common_uvalue.cc: Don't name unused arguments.

	* src/ubanner.cc: Include config.h.

2006-10-15  Akim Demaille  <akim.demaille@free.fr>

	Fix some warnings.
	* ucommand.cc: No longer name unused arguments.
	* ucommand.h: Idem.
	* ueventhandler.h: Idem.
	* uconnection.h: Idem.
	* ueventhandler.cc: Idem.
	* uconnection.cc: Idem.

2006-10-15  Akim Demaille  <akim.demaille@free.fr>

	Upgrade build-aux.
	* configure.ac: Don't use -Weffc++ yet.
	* ustring.cc: Use C++ headers.
	Formatting changes.
	* ustring.h: Formatting changes.
	* memorymanager/blockmemorymanager.h: Idem.
	(BlockPool::BlockPool): New.
	* memorymanager/memorymanager.cc: Implement it.
	And use it.
	* ucommand.h: Formatting changes.
	* console.cc: Idem.
	* liburbi-c++/src/liburbi/uabstractclient.cpp: Idem.

2006-10-15  Matthieu Nottale  <nottale@gostai.com>

	r226: FIX: ugrammar was unsaved in my IDE. Sorry

	* parser/bison/ugrammar.y: Fix conflict.
